# osu-link

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix  rust-toolchain
.github/workflows/: actions.yml  push.yml
src/: database.rs  main.rs  processors.rs
