cargo-features = ["strip"]

[package]
name = "osu-link"
version = "0.1.2"
edition = "2021"

[profile.release]
lto = true
strip = true

[dependencies]
anyhow = "1.0.0"
chrono = "0.4"
dirs = "4.0"
indicatif = "0.17.0-beta.1"
itertools = "0.10.1"
libosu = { git = "https://github.com/LavaDesu/libosu", branch = "staging/all" }
num_cpus = "1.13.0"
rand = "0.8.0"
rayon = "1.5.1"
rfd = "0.5.0"
rusqlite = "0.25.3"
sha2 = "0.9.8"
walkdir = "2.3.2"

[target.'cfg(windows)'.dependencies]
rusqlite = { version = "0.25.3", features = ["bundled"] }
